counter-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: counter
  namespace: epistola
spec:
  containers:
  - name: count
    image: busybox:1.28
    args: [/bin/sh, -c,
            'i=0; while true; do echo "$i: $(date)"; i=$((i+1)); sleep 1; done']
