nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-d
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-a4p-platform2
        image: nginx:alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf
        - name: www-storage
          mountPath: /code
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: www-storage
        persistentVolumeClaim:
          claimName: pv-www-claim
      - name: nginx-config-volume
        configMap:
          name: nginx-config
