task-pv-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: task-pv-pod
spec:
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: task-pv-claim
  containers:
    - name: nginx_agro4plus_mgmt
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: task-pv-storage
        - mountPath: "/etc/nginx/conf.d/default.conf"
          name: task-pv-storage
    - name: mysql_agro4plus_mgmt
      image: mysql:5.7
      ports:
        - containerPort: 3306
      volumeMounts:
        - mountPath: "/var/lib/mysql"
          name: task-pv-storage
    - name: php_agro4plus_mgmt
      image: php:fpm
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: "/var/www/html"
          name: task-pv-storage
