mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysql
spec:
  ports:
    - port: 80
  selector:
    app: mysql
  type: LoadBalancer
