php-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-service
  namespace: epistola
  labels:
    app: php
spec:
  type: NodePort
  ports:
    - port: 9000
      targetPort: 80
      # nodePort: 31345
  selector:
    app: php
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-d
  namespace: epistola
  labels:
    app: php
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
      - name: php-a4p-platform2
        image: epistola/php
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf
        - name: www-storage
          mountPath: /code
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: www-storage
        persistentVolumeClaim:
          claimName: pv-www-claim
      - name: nginx-config-volume
        configMap:
          name: nginx-config
