spa-flaskapi-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api-service
  namespace: epistola
  labels:
    app: flask-api
spec:
  type: NodePort
  ports:
    - port: 10100         
      targetPort: 5000
      nodePort: 31300       
  selector:
    app: flask-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api-d
  namespace: epistola
  labels:
    app: flask-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
      - name: spa-a4p-flask-api
        image: petamva/flask-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
      restartPolicy: Always
      serviceAccountName: ""
