spa-php-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: spa-php-service
  namespace: epistola
  labels:
    app: spa-php
spec:
  ports:
    - protocol: TCP
      port: 9000
  selector:
    app: spa-php
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spa-php-d
  namespace: epistola
  labels:
    app: spa-php
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spa-php
  template:
    metadata:
      labels:
        app: spa-php
    spec:
      containers:
      - name: spa-a4p-php
        image: epistola/php
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: www-storage
          mountPath: /code
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: www-storage
        persistentVolumeClaim:
          claimName: pv-www-claim-spa
