ingress-spa-flask-api.yaml
# This is experimental - not working
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-spa-flask-api-routing
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: "/"
  namespace: epistola
spec:
  rules:
  - host: spa.agro4plus.eu
    http:
      paths:
      - path: /api/forecast
        pathType: Prefix
        backend:
          service:
            name: flask-api-service
            port: 
              number: 10100
        path: /forecast  
  - host: spa.agro4plus.gr
    http:
      paths:
      - path: /api/forecast
        pathType: Prefix
        backend:
          service:
            name: flask-api-service
            port: 
              number: 10100
        path: /forecast
